# Design-Patterns

./: Boats.cpp  Boats.h  CMakeLists.txt  Chain.cpp  Chain.h  Command.cpp  Command.h  Mediator.cpp  Mediator.h  Observer.cpp  Observer.h  Pamiatka.cpp  Pamiatka.h  Proxy.cpp  Proxy.h  README.md  Strategy.cpp  Strategy.h  Visitor.cpp  Visitor.h  main.cpp
tests/: test1  test1.cpp
